# ShockPlus

./: .travis.yml  CMakeLists.txt  COMPILING.md  README.md  sonar-project.properties
.github/workflows/: main.yml  sonar.yml
src/GameSrc/: ai.cpp  airupt.cpp  amap.cpp  amaploop.cpp  ammomfd.cpp  anim.cpp  audiolog.cpp  automap.cpp  bark.cpp  biohelp.cpp  cardmfd.cpp  citres.cpp  combat.cpp  cone.cpp  criterr.cpp  cutsloop.cpp  cyber.cpp  cybermfd.cpp  cybmem.cpp  cybrnd.cpp  damage.cpp  digifx.cpp  drugs.cpp  effect.cpp  email.cpp  faceobj.cpp  fixtrmfd.cpp  frcamera.cpp  frclip.cpp  frcompil.cpp  frmain.cpp  frobj.cpp  froslew.cpp  frpipe.cpp  frpts.cpp  frsetup.cpp  frtables.cpp  frterr.cpp  frutil.cpp  frutils.cpp  (+70 more)
src/GameSrc/Headers/: ai.h  airupt.h  amap.h  amaploop.h  ammomfd.h  anim.h  audiolog.h  cit2d.h  citres.h  combat.h  cone.h  cutsloop.h  cyber.h  cybmem.h  cybrnd.h  damage.h  digifx.h  dirac.h  drugs.h  effect.h  email.h  faketime.h  fatigue.h  frcamera.h  frcursors.h  fredge.h  frflags.h  frintern.h  froslew.h  frpipe.h  frprotox.h  frsetup.h  frsubclp.h  frterr.h  frutils.h  fullscrn.h  game_screen.h  gameloop.h  gameobj.h  gamerend.h  (+66 more)
src/Libraries/: CMakeLists.txt
src/Libraries/2D/: CMakeLists.txt
src/Libraries/2D/Source/: 2d.h  MacDev.c  MacDev.h  StateStk.c  bitmap.c  bitmap.h  blend.c  blend.h  blndat.h  blnfcn.h  buffer.h  canvas.c  canvas.h  chain.h  close.c  cnvdrv.h  ctxmac.h  detect.c  ifcn.h  init.c  init_2d.h  linfcn.h  lintab.c  lintab.h  lintyp.h  mode.c  mode.h  pal.c  permap.c  persetup.c  pertol.c  pertol.h  pertyp.h  pixfill.c  pixfill.h  pixtab.h  plytyp.h  polyint.h  rgb.c  rgb.h  (+16 more)
src/Libraries/2D/Source/Clip/: clip.h  clpclin.c  clpcon.h  clpf24.c  clpfcn.h  clplin.c  clplin2.c  clpltab.c  clpltab.h  clpltyp.h  clpmono.c  clpply.c  clppoly.c  clprect.c  clpslin.c
src/Libraries/2D/Source/Flat8/: fl8bl.c  fl8bldbl.c  fl8chfl8.c  fl8clear.c  fl8clin.c  fl8cnv.c  fl8dbl.c  fl8dbl.h  fl8fl8.c  fl8fl8c.c  fl8fl8m.c  fl8fltr2.c  fl8ft.c  fl8g24.c  fl8gfl8.c  fl8gpix.c  fl8hfl8.c  fl8hlin.c  fl8lf.c  fl8lin.c  fl8ll.c  fl8lnop.c  fl8mscl.c  fl8nl.c  fl8p24.c  fl8pix.c  fl8ply.c  fl8rsd8.c  fl8s.c  fl8slin.c  fl8tf.h  fl8tl8.c  fl8tmapdv.h  flat8.h
src/Libraries/2D/Source/GR/: grbm.h  grcbm.h  grclhbm.h  grcply.h  grd.c  grd.h  grdbm.h  grdev.h  grgbm.h  grhbm.h  grilin.c  grlin.h  grmalloc.c  grmalloc.h  grnull.c  grnull.h  grp24.h  grpix.h  grply.h  grrect.h  grrend.h  grs.h  grstate.h  gruilin.c
src/Libraries/2D/Source/RSD/: RSDUnpack.c  rsdcvt.c  rsdunpck.h
src/Libraries/2D/Source/string/: chr.h  chrsiz.c  genchr.c  genstr.c  genuchr.c  genustr.c  str.h  strscl.c  strsiz.c  struscl.c  strwrap.c
src/Libraries/3D/: CMakeLists.txt
src/Libraries/3D/Source/: 3d.h  3d_bitmap.c  3d_bitmap.h  3dinterp.c  3dinterp.h  alloc.c  clip.c  fov.c  globalv.c  globalv.h  instance.c  interp.c  light.c  light.h  matrix.c  matrix.h  points.c  polygon.c  polygon.h  slew.c  tmap.c  vector.c  vector.h
src/Libraries/AFILE/: CMakeLists.txt
src/Libraries/AFILE/Source/: afile.c  afile.h  amov.c  compose.c  compose.h  draw4x4.cpp  draw4x4.h  huff.h  huffde.cpp  movie.h
src/Libraries/DSTRUCT/: CMakeLists.txt
src/Libraries/DSTRUCT/Source/: array.c  array.h  hash.c  hash.h  pqueue.c  pqueue.h  rect.c  rect.h  slist.h
src/Libraries/EDMS/: CMakeLists.txt
src/Libraries/EDMS/Source/: collide.cc  edms.h  edms_chk.h  edms_int.h  edms_mod.h  externs.h  idof.h  interfac.cc  interfac.h  intrsect.cc  intrsect.h  phy_tool.cc  soliton.cc  ss_flet.h
src/Libraries/EDMS/Source/MODELS/: d_f_2.h  d_f_face.cc  d_f_face.h  d_frame.cc  d_frame.h  ftl.cc  ftl.h  ftlface.cc  pelface.cc  pelvis.cc  pelvis.h  robot.cc  robot.h
src/Libraries/FIX/: CMakeLists.txt
src/Libraries/FIX/Source/: fix.h
src/Libraries/FIXPP/: CMakeLists.txt
src/Libraries/H/: 2dres.h  keydefs.h  lg_error.h  lg_types.h
src/Libraries/INPUT/: CMakeLists.txt
src/Libraries/INPUT/Source/: kb.h  kbcook.c  kbcook.h  mouse.c  mouse.h  sdl_events.c  sdl_events.h
src/Libraries/LG/: CMakeLists.txt
src/Libraries/LG/Source/: lg.h  memall.h  stack.c  tmpalloc.c  tmpalloc.h
src/Libraries/LG/Source/LOG/src/: log.h
src/Libraries/PALETTE/: CMakeLists.txt
src/Libraries/PALETTE/Source/: palette.c  palette.h
src/Libraries/RES/: CMakeLists.txt
src/Libraries/RES/Source/: lzw.h  res.c  res.h  resformat.h
src/Libraries/RND/: CMakeLists.txt
src/Libraries/RND/Source/: rnd.h
src/Libraries/SND/Source/: lgsndx.h
src/Libraries/UI/: CMakeLists.txt
src/Libraries/UI/Source/: curdat.h  curdrw.c  curdrw.h  cursors.c  cursors.h  curtyp.h  event.c  event.h  event_ui.c  event_ui.h  hotkey.c  hotkey.h  region.c  region.h  resgadg.h  slab.c  slab.h  vmouse.c  vmouse.h
src/Libraries/VOX/: CMakeLists.txt
src/Libraries/VOX/Source/: vox.h  vox2d.c  vox2d.h  vox3d.c  voxinit.c
src/MacSrc/: InitMac.cpp  InitMac.h  MacTune.cpp  MacTune.h  Modding.cpp  Modding.h  OpenGL.cpp  Prefs.c  Prefs.cpp  Prefs.h  SDLFunctions.cpp  SDLFunctions.h  SDLSound.cpp  Shock.cpp  Shock.h  ShockBitmap.cpp  Xmi.cpp  Xmi.h
src/MusicSrc/: MusicDevice.cpp  MusicDevice.h
src/ShockSrc/: Shock.cpp  Shock.h
src/ShockSrc/Engine/: HotKeyDispatcher.cpp  HotKeyDispatcher.h  OptionInfo.cpp  OptionInfo.h  Options.cpp  Options.h  Options.inc.h
src/ShockSrc/Engine/Exception/: Exception.h
