add_subdirectory(2D)
add_subdirectory(3D)
add_subdirectory(AFILE)
add_subdirectory(DSTRUCT)
add_subdirectory(EDMS)
add_subdirectory(FIX)
add_subdirectory(FIXPP)
add_subdirectory(INPUT)
add_subdirectory(LG)
add_subdirectory(PALETTE)
add_subdirectory(RND)
add_subdirectory(RES)
add_subdirectory(UI)
add_subdirectory(VOX)
