set(2D_SRC
	Source/bit.c
	Source/bitmap.c
	Source/blend.c
	Source/canvas.c
	Source/close.c
	Source/cnvtab.c
	Source/context.c
	Source/detect.c
	Source/devtab.c
	Source/fcntab.c
	Source/init.c
	Source/lintab.c
	Source/mode.c
	Source/pal.c
	Source/permap.c
	Source/persetup.c
	Source/pertol.c
	Source/rgb.c
	Source/screen.c
	Source/sscrn.c
	Source/StateStk.c
	Source/svgainit.c
	Source/tempbm.c
	Source/temptm.c
	Source/tlucdat.c
	Source/tluctab.c
	Source/valloc.c
	Source/vtab.c
	Source/MacDev.c
	Source/GR/grilin.c
	Source/GR/grmalloc.c
	Source/GR/grnull.c
	Source/GR/gruilin.c
	Source/GR/grd.c
	Source/Gen/gendisk.c
	Source/Gen/gentm.c
	Source/Gen/genwclin.c
	Source/Gen/genuclin.c
	Source/Gen/genrsd8.c
	Source/Gen/genuvlin.c
	Source/Gen/genhlin.c
	Source/Gen/genrsdbm.c
	Source/Gen/genvlin.c
	Source/Gen/genvcply.c
	Source/Gen/genclin.c
	Source/Gen/genfl8c.c
	Source/Gen/genrsdtm.c
	Source/Gen/genel.c
	Source/Gen/genwlin.c
	Source/Gen/genpix.c
	Source/Gen/genuhlin.c
	Source/Gen/genhfl8.c
	Source/Gen/genov.c
	Source/Gen/gente.c
	Source/Gen/genlin.c
	Source/Gen/gencwlin.c
	Source/Gen/genchfl8.c
	Source/Gen/gengfl8.c
	Source/Gen/genbox.c
	Source/Gen/genmono.c
	Source/Gen/genulin.c
	Source/Gen/gencnv.c
	Source/Gen/genuslin.c
	Source/Gen/genvpoly.c
	Source/Gen/general.c
	Source/Gen/gencirc.c
	Source/Gen/genfl8.c
	Source/Gen/genf24.c
	Source/Gen/gentl8.c
	Source/Gen/genrect.c
	Source/Gen/genvrect.c
	Source/Gen/genslin.c
	Source/Flat8/fl8vlin.c
	Source/Flat8/FL8OPL.c
	Source/Flat8/fl8cply.c
	Source/Flat8/fl8clin.c
	Source/Flat8/fl8lp.c
	Source/Flat8/fl8lf.c
	Source/Flat8/fl8ll.c
	Source/Flat8/fl8s.c
	Source/Flat8/fl8hfl8.c
	Source/Flat8/fl8pnt.c
	Source/Flat8/fl8fl8m.c
	Source/Flat8/fl8ltp.c
	Source/Flat8/fl8fl8c.c
	Source/Flat8/fl8w.c
	Source/Flat8/fl8cop.c
	Source/Flat8/fl8wlin.c
	Source/Flat8/fl8lw.c
	Source/Flat8/fl8pix.c
	Source/Flat8/fl8row.c
	Source/Flat8/fl8ft.c
	Source/Flat8/fl8rsd8.c
	Source/Flat8/Fl8F.c
	Source/Flat8/fl8bldbl.c
	Source/Flat8/fl8clear.c
	Source/Flat8/fl8p.c
	Source/Flat8/fl8wclin.c
	Source/Flat8/fl8hlin.c
	Source/Flat8/fl8bl.c
	Source/Flat8/fl8gpix.c
	Source/Flat8/fl8ns.c
	Source/Flat8/fl8lnop.c
	Source/Flat8/fl8dbl.c
	Source/Flat8/fl8clin.h
	Source/Flat8/fl8cnv.c
	Source/Flat8/fl8slin.c
	Source/Flat8/fl8lin.c
	Source/Flat8/fl8tsmap.c
	Source/Flat8/fl8ply.c
	Source/Flat8/fl8sply.c
	Source/Flat8/fl8rect.c
	Source/Flat8/fl8gfl8.c
	Source/Flat8/fl8tl8.c
	Source/Flat8/fl8p24.c
	Source/Flat8/fl8g24.c
	Source/Flat8/fl8ctp.c
	Source/Flat8/fl8mscl.c
	Source/Flat8/fl8lop.c
	Source/Flat8/fl8ntrp2.c
	Source/Flat8/fl8sub.c
	Source/Flat8/fl8tpl.c
	Source/Flat8/fl8wclin.h
	Source/Flat8/fl8nl.c
	Source/Flat8/fl8fltr2.c
	Source/Flat8/fl8mono.c
	Source/Flat8/fl8fl8.c
	Source/Flat8/fl8chfl8.c
	Source/Clip/clpply.c
	Source/Clip/clplin.c
	Source/Clip/clpclin.c
	Source/Clip/clpltab.c
	Source/Clip/clpf24.c
	Source/Clip/clplin2.c
	Source/Clip/clppoly.c
	Source/Clip/clpslin.c
	Source/Clip/clprect.c
	Source/Clip/clpmono.c
	Source/RSD/rsdcvt.c
	Source/RSD/RSDUnpack.c
	Source/string/chrsiz.c
	Source/string/genchr.c
	Source/string/genstr.c
	Source/string/genuchr.c
	Source/string/genustr.c
	Source/string/strscl.c
	Source/string/strsiz.c
	Source/string/struscl.c
	Source/string/strwrap.c
	Source/GR/grd.c
	Source/GR/grilin.c
	Source/GR/grmalloc.c
	Source/GR/grnull.c
	Source/GR/gruilin.c
	)

add_library(2D STATIC ${2D_SRC})
target_link_libraries(2D FIX LG)
target_include_directories(2D PUBLIC
	$<BUILD_INTERFACE:
		${CMAKE_SOURCE_DIR}/src/Libraries/H
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/Clip
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/Flat8
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/Gen
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/GR
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/RSD
		${CMAKE_SOURCE_DIR}/src/Libraries/2D/Source/string
	>
	$<INSTALL_INTERFACE:include>
	)
export(TARGETS 2D FILE 2DConfig.cmake)
